--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -547,3 +547,7 @@ table.table-review-sites .message-pending-connections {color: var(--text_color_g
     border: 1px solid #C5C6CD;
     border-radius: 100px;
 }
+
+.wrapper-page-selection {display: flex; gap: 40px}
+.wrapper-page-selection .settings-column {flex: 1; max-width: 800px}
+.wrapper-page-selection .column-page-selection {padding-left: 50px; border-left: 1px solid #C5C6CD}
