--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -133,6 +133,8 @@ table.locations_table tr .column-action {width: 100px}
     border-radius: 10px;
 }
 
+.checkbox-review-site.has-pending {filter: blur(1.5px); pointer-events: none}
+
 .checkbox-review-site img {max-width: 100px; max-height: 100%}
 
 .checkbox-review-site input {
@@ -566,3 +568,16 @@ form.form-submit-ticket .input-field {
 }
 
 form.form-submit-ticket textarea {min-height: 100px;}
+
+.no-connection {
+    font-size: 17px;
+    font-style: italic;
+    padding: 10px 18px;
+    display: table;
+    margin-top: 30px;
+    line-height: 1.3;
+    letter-spacing: 2px;
+    border-radius: 4px;
+    border: 2px solid var(--primary_color);
+    border-left-width: 10px;
+}
