--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -3,6 +3,7 @@
     --text_color: #2C3149;
     --text_color_gray: #6e6f72;
     --primary_color: #4123FF;
+    --border_color: #CED0D7
 }
 
 .gap-10 {height: 10px;}
@@ -42,7 +43,7 @@ body.screen-proofratings .wrap.proofratings-settings-wrap {padding: 30px; margin
 
 .proofratins-header {padding: 30px; margin: -30px -30px 30px -30px; background-color: #F4F7FE; border-bottom: 1px solid #CED0D7}
 
-.header-row {display: flex; justify-content: space-between; align-items: center;}
+.header-row {display: flex; justify-content: space-between; align-items: center; width: 100%;}
 
 body.screen-proofratings .form-footer {display: flex; font-weight: 500; align-items: center; gap: 10px; margin-top: 40px;}
 body.screen-proofratings .form-footer a {text-decoration: none}
@@ -511,6 +512,8 @@ form.form-search-review-sites button {
 }
 
 .search-review-sites-wrapper {display: flex; gap: 50px}
+.search-review-sites-wrapper .left-column {flex: 1; max-width: 450px; align-self: flex-end;}
+.search-review-sites-wrapper .location-select {width: 100%; margin-bottom: 45px; padding: 8px 15px; border-color: #CED0D7}
 
 table.table-review-sites {border-collapse: collapse; width: calc(100% + (var(--wrap_edge) * 2)); margin-inline: calc(var(--wrap_edge) * -1)}
 
@@ -574,7 +577,7 @@ form.form-submit-ticket textarea {min-height: 100px;}
     font-style: italic;
     padding: 10px 18px;
     display: table;
-    margin-top: 30px;
+    margin-block: 30px;
     line-height: 1.3;
     letter-spacing: 2px;
     border-radius: 4px;
