--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -163,19 +163,9 @@ html {
 .proofratings-badge.proofratings-badge-narrow .proofratings-reviews {margin-right: 20px;}
 .proofratings-badge.proofratings-badge-narrow .proofratings-review-count {color: var(--review_text_color);}
 
-.proofratings-review-widgets-grid {
-    display: grid;
-    gap: 30px;
-    justify-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 220px))
-}
-
-
+.proofratings-review-widgets-grid {gap: 30px; display: grid; justify-content: center; grid-template-columns: repeat(auto-fit, minmax(200px, 220px))}
 .proofratings-review-widgets-grid.proofratings-widgets-grid-basic {grid-template-columns: repeat(auto-fit, minmax(130px, 1fr))}
-/* .proofratings-review-widgets-grid.proofratings-widgets-grid-rectangle {grid-template-columns: repeat(auto-fit, minmax(200px, 260px))} */
 .proofratings-review-widgets-grid.proofratings-widgets-grid-rectangle {grid-template-columns: repeat(auto-fit, minmax(200px, 1fr))}
-
-.proofratings-review-widgets-grid > * {margin-left: auto; margin-right: auto;}
 
 .proofratings-widget {
     --shadowColor: rgba(0,0,0, 0.25);
@@ -189,6 +179,7 @@ html {
     align-items: center;
     border-radius: 10px;
     width: 200px;
+    text-align: left;
     min-height: 185px;
     font-family: var(--proofratingsFont)!important;
     flex-direction: column;
@@ -301,13 +292,13 @@ html {
 
 .proofratings-widget.proofratings-widget-rectangle .proofratings-stars, .proofratings-widget.proofratings-widget-rectangle .proofratings-stars i {height: 22px!important; -webkit-mask-size: 30px auto}
 
-.proofratings-review-widgets-grid.proofratings-widgets-grid-icon {grid-template-columns: repeat(auto-fit, minmax(200px, 255px))}
-.proofratings-widget.proofratings-widget-icon {--themeColor:var(--star_color); all: unset; font-size: 12px; text-align: left; flex: 0 0 auto; display: flex; align-items: center; border: none!important; box-shadow: none!important}
+.proofratings-review-widgets-grid.proofratings-widgets-grid-icon {grid-template-columns: repeat(auto-fit, minmax(200px, 255px)); justify-content: unset }
+.proofratings-widget.proofratings-widget-icon {--themeColor:var(--star_color); flex-direction: row; padding: unset; min-height: 0; font-size: 12px; text-align: left; flex: 0 0 auto; display: flex; align-items: center; border: none!important; box-shadow: none!important}
 .proofratings-widget.proofratings-widget-icon .proofratings-stars {margin-left: 0;}
 .proofratings-widget.proofratings-widget-icon .review-site-logo {flex: 0 0 46px; margin-bottom: 0; display: unset; height: auto; margin-right: 15px;}
 .proofratings-widget.proofratings-widget-icon .review-site-logo img {vertical-align: middle;}
 .proofratings-widget.proofratings-widget-icon .review-info-container {flex: 1 0 auto}
-.proofratings-widget.proofratings-widget-icon .review-info {color: var(--textcolor, inherit); line-height: 1; font-weight: 600; display: flex; gap: 5px; align-items: center;}
+.proofratings-widget.proofratings-widget-icon .review-info {color: var(--textcolor, inherit); margin-top: 4px; line-height: 1; font-weight: 600; display: flex; gap: 5px; align-items: center;}
 .proofratings-widget.proofratings-widget-icon .review-info .separator-circle {font-size: 11px;}
 
 
