--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -102,37 +102,19 @@ table.locations_table tr .column-action {width: 100px}
     font-weight: bold;
 }
 
-.proofratings-status p {
-    margin: 0;
-    font-size: inherit;
-}
+.proofratings-status p {margin: 0; font-size: inherit}
 
-.proofratings-settings-wrap .shortcode-info {
-    margin-bottom: 20px;
-}
+.proofratings-settings-wrap .shortcode-info {margin-bottom: 20px}
 
-.proofratings-settings-wrap .proofratings-options {
-    max-width: 1200px;
-}
+.proofratings-settings-wrap .proofratings-options {max-width: 1200px}
 
 .proofratings-settings-wrap .wp-heading-inline {margin-bottom: 10px;}
 
 .proofratings-settings-wrap .nav-tab-wrapper {margin-bottom: 20px!important}
 
+.review-sites-checkboxes {display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 10px}
 
-.review-sites-checkboxes {display: flex; flex-wrap: wrap; gap: 20px}
-
-.checkbox-review-site {
-    padding: 20px;
-    height: 40px;
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 10px;
-}
+.checkbox-review-site {padding: 20px; height: 70px; position: relative; display: inline-flex; align-items: center; justify-content: center; border: 1px solid #ccc; background-color: #fff; border-radius: 10px}
 
 .checkbox-review-site.has-pending {filter: blur(1.5px); pointer-events: none}
 
@@ -517,7 +499,10 @@ form.form-search-review-sites button {
 
 .search-review-sites-wrapper {display: flex; gap: 50px}
 .search-review-sites-wrapper .left-column {flex: 0 0 450px; align-self: flex-end;}
-.search-review-sites-wrapper .location-select {width: 100%; margin-bottom: 45px; padding: 8px 15px; border-color: #CED0D7}
+
+.location-dropdown {margin-top: 10px;}
+.location-dropdown label {display: table; font-weight: bold; margin-bottom: 5px}
+.location-dropdown .location-select {width: 100%;padding: 8px 15px; border-color: #CED0D7}
 
 table.table-review-sites {border-collapse: collapse; width: calc(100% + (var(--wrap_edge) * 2)); margin-inline: calc(var(--wrap_edge) * -1)}
 
