--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -43,7 +43,7 @@ body.screen-proofratings .wrap.proofratings-settings-wrap {padding: 30px; margin
 
 .proofratins-header {padding: 30px; margin: -30px -30px 30px -30px; background-color: #F4F7FE; border-bottom: 1px solid #CED0D7}
 
-.header-row {display: flex; justify-content: space-between; align-items: center; width: 100%;}
+.header-row {display: flex; justify-content: space-between; align-items: center}
 
 body.screen-proofratings .form-footer {display: flex; font-weight: 500; align-items: center; gap: 10px; margin-top: 40px;}
 body.screen-proofratings .form-footer a {text-decoration: none}
