--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -143,7 +143,12 @@ table.locations_table tr .column-action {width: 100px}
 
 fieldset.fieldset-site-review {display: none; margin-bottom: 30px;}
 
-.review-us {text-align: center; font-size: 17px}
+#wpfooter {display: flex; justify-content: space-between;}
+#wpfooter > * {flex: 1;}
+#wpfooter #footer-left {order: 0;}
+#wpfooter .proofratings-review-us {text-align: center; font-size: 17px; order: 4; text-indent: -90px}
+#wpfooter #footer-upgrade {order: 12; text-align: right;}
+#wpfooter .clear {display: none}
 
 input[type="checkbox"].checkbox-switch {
     text-align: center;
@@ -561,15 +566,12 @@ form.form-submit-ticket textarea {min-height: 100px;}
 }
 
 .badge-overview-item {
-    margin: 0 -30px 0;
+    margin: 0 -30px -1px;
     padding: 0 30px;
-    border-bottom: 1px solid var(--border_color);
+    border-block: 1px solid var(--border_color);
 }
 
-.badge-overview-item > summary {
-    margin: 0 -30px;
-    padding: 18px 30px;
-}
+.badge-overview-item > summary {margin: 0 -30px; padding: 20px 30px; cursor: pointer}
 
 .badge-overview-item > summary {list-style: none}
 .badge-overview-item > summary::-webkit-details-marker {display:none}
@@ -578,11 +580,7 @@ form.form-submit-ticket textarea {min-height: 100px;}
 .badge-overview-item[open] {padding-bottom: 20px}
 .badge-overview-item[open] > summary {margin-bottom: 30px; border-bottom: 1px solid var(--border_color); background-color: #F4F7FE}
 
-.badge-items-grid {
-    gap: 70px;
-    display: flex;
-    flex-wrap: wrap;
-}
+.badge-items-grid {gap: 70px; display: flex; flex-wrap: wrap}
 
 .badge-items-grid > li {
     max-width: 300px;
