--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -440,7 +440,7 @@ input[type="checkbox"].checkbox-yesno:checked:after {content: "Yes";}
 
 .proofratings-copyarea .description {font-size: 12px;}
 
-.section-title-large {color: #2C3149; font-size: 30px; line-height: 1.3; font-weight: bold; margin-top: 40px; margin-bottom: 10px;}
+.section-title-large {color: #2C3149; font-size: 1.3em; text-decoration: underline; line-height: 1.3; font-weight: bold; margin-top: 40px; margin-bottom: 10px;}
 
 form.form-search-review-sites {
     position: relative;
@@ -582,35 +582,16 @@ form.form-submit-ticket textarea {min-height: 100px;}
 
 .badge-items-grid {gap: 70px; display: flex; flex-wrap: wrap}
 
-.badge-items-grid > li {
-    max-width: 300px;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
+.badge-items-grid > li {max-width: 300px; display: flex; gap: 20px; align-items: center; flex-direction: column}
 
-.badge-items-grid img {
-    height: 150px;
-    max-width: 90%;
-    object-fit: contain;
-}
+.badge-items-grid img {height: 150px; max-width: 90%; object-fit: contain}
 
-.badge-items-grid .label-switch-checkbox {margin-bottom: 20px;}
-
-.label-switch-checkbox {
-    gap: 9px;
-    display: inline-flex;
-    align-items: center;
-}
-
-
-.label-switch-checkbox span {line-height: 1; position: relative; top: -1px; }
+.label-switch-checkbox {gap: 9px; display: inline-flex; align-items: center}
+.label-switch-checkbox span {line-height: 1; position: relative; top: -1px; color: #6E7289; }
 .label-switch-checkbox input {margin: 0!important}
-.label-switch-checkbox input + span {order: -1; font-weight: bold}
-.label-switch-checkbox input:checked + span {font-weight: normal}
-.label-switch-checkbox input:checked + span + span {font-weight: bold;}
+.label-switch-checkbox input + span {order: -1; font-weight: bold; color: #000;}
+.label-switch-checkbox input:checked + span {font-weight: normal; color: #6E7289;}
+.label-switch-checkbox input:checked + span + span {font-weight: bold; color: #000;}
 
 .label-switch-checkbox input[type="checkbox"].checkbox-switch {width: 44px; height: 18px; }
 .label-switch-checkbox input[type="checkbox"].checkbox-switch:after {content: "";}
@@ -626,3 +607,5 @@ form.form-submit-ticket textarea {min-height: 100px;}
 .label-switch-checkbox input[type="checkbox"].checkbox-switch:checked:before {
     left: calc(100% - 18px);
 }
+
+.btn-copy-shortcode {color: #000; text-decoration: underline}
