--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -143,7 +143,7 @@ table.locations_table tr .column-action {width: 100px}
 
 fieldset.fieldset-site-review {display: none; margin-bottom: 30px;}
 
-#wpfooter {display: flex; justify-content: space-between;}
+#wpfooter {display: flex; align-items: center; justify-content: space-between;}
 #wpfooter > * {flex: 1;}
 #wpfooter #footer-left {order: 0;}
 #wpfooter .proofratings-review-us {text-align: center; font-size: 17px; order: 4; text-indent: -90px}
@@ -608,4 +608,27 @@ form.form-submit-ticket textarea {min-height: 100px;}
     left: calc(100% - 18px);
 }
 
-.btn-copy-shortcode {color: #000; text-decoration: underline}
+.btn-copy-shortcode {color: #000; text-decoration: underline; outline: none!important; box-shadow: none!important}
+
+
+#toast-proofratings {
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    position: fixed;
+    padding: 15px 18px;
+    left: 50%;
+
+    bottom: 40px;
+    border-radius: 4px;
+    background-color: #000;
+    z-index: 999999999;
+    transform: translateX(-50%);
+    transition: all 150ms;
+    box-shadow: 0 0 15px rgb(0 0 0 / 70%);
+}
+
+#toast-proofratings:empty {
+    bottom: -40px;
+    pointer-events: none;
+}
