--- a/assets/css/proofratings-dashboard.css
+++ b/assets/css/proofratings-dashboard.css
@@ -13,3 +13,24 @@
     display: inline-block;
 }
 
+.proofratings-demo-message {
+    color: #fff;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    gap: 8px;
+    font-weight: bold;
+    display: flex;
+    padding: 10px 18px;
+    border-radius: 100px;
+    padding-inline-start: 35px;
+    transform: translateX(-50%);
+    background: url(../images/bolt.svg) no-repeat left center;
+    background-color: #4123FF;
+    background-position-x: 13px;
+    background-size: 16px auto;
+}
+
+.proofratings-demo-message a {
+    color: inherit;
+}
