--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -20,11 +20,7 @@
 
 .bold {font-weight: bold!important}
 
-.btn-support {
-    color: inherit;
-    font-size: 16px;
-    text-decoration: none;
-}
+.btn-support {color: inherit; font-size: 22px; text-decoration: none}
 
 #tooltip {
     background-color: #333;
@@ -264,8 +260,6 @@ input[type="checkbox"].checkbox-yesno:checked:after {content: "Yes";}
 .proofratings-banner-badge .proofratings-banner-close {display: none!important}
 
 .proofratings-banner-badge .proofratings-review-count {margin-right: 0;}
-.proofratings-banner-badge .button-container {display: none}
-
 
 .proofratings-review-widgets-grid > *:nth-child(n+5) {display: none}
 
@@ -282,6 +276,8 @@ input[type="checkbox"].checkbox-yesno:checked:after {content: "Yes";}
 
 .proofratings-popup-widgets-box > * {box-sizing: border-box;}
 
+
+.analytics-title {display: flex; gap: 20px; margin-bottom: 20px; align-items: center}
 
 .analytics-filter {display: flex; gap: 15px; align-items: center; margin-top: 13px}
 
@@ -414,7 +410,7 @@ input[type="checkbox"].checkbox-yesno:checked:after {content: "Yes";}
 .proofratings-dashboard-menu .menu-label {
     color: var(--primary_color);
     display: block;
-    font-size: 130%;
+    font-size: 110%;
     font-weight: bold;
 }
 
@@ -589,11 +585,21 @@ form.form-submit-ticket textarea {min-height: 100px;}
     border-block: 1px solid var(--border_color);
 }
 
-.badge-overview-item > summary {margin: 0 -30px; padding: 20px 30px; cursor: pointer}
-
+.badge-overview-item > summary {margin: 0 -30px; padding: 20px 30px; cursor: pointer; position: relative;}
 .badge-overview-item > summary {list-style: none}
 .badge-overview-item > summary::-webkit-details-marker {display:none}
 .badge-overview-item > summary h4 {color: var(--primary_color); font-size: 16px; margin: 0 0 5px 0}
+.badge-overview-item > summary:after {
+    content: "\f343";
+    font-size: 20px;
+    font-family: dashicons;
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+}
+
+.badge-overview-item[open] > summary:after {transform: translateY(-50%) rotateZ(180deg)}
 
 .badge-overview-item[open] {padding-bottom: 20px}
 .badge-overview-item[open] > summary {margin-bottom: 30px; border-bottom: 1px solid var(--border_color); background-color: #F4F7FE}
